--- a/web/src/index.css
+++ b/web/src/index.css
@@ -28,3 +28,27 @@ textarea {
   width: 100%;
   height: 150px;
 }
+
+.btn-clipboard {
+  position: absolute;
+  top: 5px;
+  right: 17px;
+  z-index: 10;
+  display: block;
+  padding: .25rem .5rem;
+  font-size: 75%;
+  color: #818a91;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0;
+  border-radius: .25rem;
+}
+
+.btn-clipboard:hover {
+    color: #fff;
+    background-color: #027de7;
+}
+
+div.generated {
+  position: relative;
+}
